[gd_scene load_steps=2 format=3 uid="uid://kje7vcoucwfe"]

[ext_resource type="Script" path="res://script/Box/hurt_box.gd" id="1_qfecm"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_qfecm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibilityEnded" from="." to="." method="_on_invincibility_ended"]
[connection signal="invincibilityStarted" from="." to="." method="_on_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
